--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
             </a>
         </p>
     </header>
+    <script src="js/Ejercicio01.js"></script>
+    <script src="js/Ejercicio02.js"></script>
+    <script src="js/Ejercicio03.js"></script>
+</body>
 </body>
 </html>
