--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     </header>
     <script src="js/Ejercicio01.js"></script>
     <script src="js/Ejercicio02.js"></script>
+    <script src="js/Ejercicio03.js"></script>
+    <script src="js/Ejercicio04.js"></script>
 </body>
 </body>
 </html>
