--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -27,6 +27,7 @@
     </header>
     <script src="js/Ejercicio01.js"></script>
     <script src="js/Ejercicio02.js"></script>
-</body>
+    <script src="js/Ejercicio03.js"></script>
+
 </body>
 </html>
